# CrewAI_Writing_Team

./: README.md  pyproject.toml  report.md
src/writerideamachine/: crew.py  main.py
src/writerideamachine/config/: agents.yaml  tasks.yaml
src/writerideamachine/tools/: file_writer.py
