[project]
name = "writerideamachine"
version = "0.1.0"
description = "WriterIdeaMachine using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,litellm,tools]==1.12.2",
]

[project.scripts]
writerideamachine = "writerideamachine.main:run"
run_crew = "writerideamachine.main:run"
train = "writerideamachine.main:train"
replay = "writerideamachine.main:replay"
test = "writerideamachine.main:test"
run_with_trigger = "writerideamachine.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
